fixed Markdown mosaics not displaying gaps properly

--- a/website/private/components/Marked.module.css
+++ b/website/private/components/Marked.module.css
@@ -70,6 +70,11 @@ p.Marked {
   flex-direction: row;
   gap: 0.5em;
 }
+.Marked table tbody {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+}
 .Marked table img,
 .Marked table iframe,
 .Marked table video {
